Fixed - transition on mobile

--- a/src/styles/Nav.scss
+++ b/src/styles/Nav.scss
@@ -14,7 +14,6 @@ header {
     flex-wrap: wrap;
     padding: 0rem 2rem;
     background-color: #f0e9eb;
-
     @media (max-width: 767px) {
       justify-content: space-between;
     }
@@ -49,9 +48,9 @@ header {
         font-size: 1.2rem;
         .cta-call {
           padding: 10px 12px;
+          color: #e4389b;
           // color: #fff;
           // color: #282828;
-          color: #e4389b;
           // background: #f49ac1;
           border: 1px solid #f49ac1;
           border-radius: 10px;
@@ -103,7 +102,7 @@ header {
     overflow-x: hidden;
   }
   header {
-    width: 100%;
+    // width: 100%;
     nav {
       .nav-links {
         position: absolute;
@@ -117,7 +116,7 @@ header {
         background-color: #f0e9eb;
         // background-color: #fff;
         transform: translateX(100%);
-        transition: transform 0.3s ease;
+        transition: all 0.3s ease;
 
         @media (max-width: 500px) {
           width: 100%;
